button small fixes

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -124,7 +124,7 @@
 
 @layer components {
   .btn-primary {
-    @apply w-full px-4 py-2 bg-blue-600  text-white font-semibold rounded-lg hover:bg-blue-700 transition-colors duration-300 flex items-center justify-center ;
+    @apply w-full px-4 py-2 bg-blue-600  text-white font-semibold rounded-lg hover:bg-blue-700 transition-colors duration-300 flex items-center cursor-pointer justify-center ;
   }
 }
 
